overflow fix

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  /*  outline: 1px solid red; */
+  outline: 1px solid red;
   /* overflow-x: hidden; */
 }
 :root {
@@ -13,14 +13,14 @@
 body {
   font-family: "roboto", sans-serif;
   height: fit-content;
-  width: 100vw;
-  display: grid;
+  width: 100%;
+  /* display: grid;
   grid-template-rows: repeat(auto, 1fr);
   grid-template:
     "header"
     "nav"
     "hero"
-    "main";
+    "main"; */
 }
 
 .header {
@@ -194,7 +194,8 @@ body {
 }
 
 .nav__menu.active {
-  top: 8vh; /* need to put back to 10vh */
+  top: 8vh;
+  width: 100%; /* need to put back to 10vh */
 }
 
 .nav__menu > li > a {
@@ -349,7 +350,7 @@ body {
   /*padding-bottom: 1.25em; */
 }
 
-html,
+/* html,
 body {
   position: relative;
   height: 100%;
@@ -363,7 +364,7 @@ body {
   margin: 0;
   padding: 0;
 }
-
+ */
 .swiper {
   width: 100%;
   padding-top: 50px;
@@ -487,7 +488,7 @@ body {
   color: black;
 }
 
-.contactMe__title,
+./* contactMe__title */
 .skill__title {
   display: flex;
   justify-content: center;
@@ -674,6 +675,7 @@ form {
 }
 .footer {
   background-color: gray;
+  width: 100%;
 }
 .footer__links {
   display: flex;
@@ -681,7 +683,7 @@ form {
   justify-content: space-between;
   align-items: flex-start;
   color: black;
-  width: 100vw;
+  width: 100%;
   list-style: none;
   padding-top: 3.125em;
   padding-bottom: 3.125em;
